--- a/WarehouseWebApp/Views/Shared/_Layout.cshtml
+++ b/WarehouseWebApp/Views/Shared/_Layout.cshtml
@@ -13,19 +13,59 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WarehouseWebApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Inventory" asp-action="Index">WarehouseWebApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inventory" asp-action="Index">Inventory</a>
                         </li>
+
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee List</a>
+                            </li>
+                        }
+
+                    </ul>
+
+                    <ul class="navbar-nav">
+                        @if (User.Identity != null && User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item me-3">
+                                <span class="nav-link text-dark">
+                                    @if (User.Identity.IsAuthenticated)
+                                    {
+                                        <span>Welcome, <strong>@(User.Identity.Name)</strong>!</span>
+                                    }   
+                                    else
+                                    {
+                                        <span>Welcome, Guest!</span>
+                                    }
+                                    </span>
+                            </li>
+                            
+                            <li class="nav-item">
+                                <a class="nav-link btn btn-danger btn-sm text-white"asp-area=""asp-controller="Auth"asp-action="Logout"style="background-color: #dc3545 !important;">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Login">Log In</a>
+                            </li>
+                            <li class="nav-item ms-2">
+                                <a class="nav-link btn btn-warning btn-sm text-dark" asp-area="" asp-controller="Auth" asp-action="Skip">Guest Access</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
