--- a/WarehouseWebApp/Views/Inventory/Index.cshtml
+++ b/WarehouseWebApp/Views/Inventory/Index.cshtml
@@ -28,7 +28,7 @@
                 <td>@item.Name</td>
                 <td>@item.Manufacturer</td>
                 <td>@item.Quantity</td>
-                <td>@item.Price.ToString("C")</td> @* Display as currency *@
+                <td>@item.Price.ToString("C")</td>
                 <td>@item.Category</td>
                 <td>@item.Description</td>
                 <td>
