--- a/WarehouseWebApp/Views/Employee/Index.cshtml
+++ b/WarehouseWebApp/Views/Employee/Index.cshtml
@@ -17,10 +17,11 @@
         @TempData["ErrorMessage"]
     </div>
 }
-
+<div>
 <a asp-controller="Employee" asp-action="Create" class="btn btn-primary">Add New Employee</a>
+</div>
 
-<table class="table">
+<table class="table table-hover table-borderless">
     <thead>
         <tr>
             <th>ID</th>
@@ -50,3 +51,6 @@
         }
     </tbody>
 </table>
+<div>
+    <a asp-controller="Employee" asp-action="Create" class="btn btn-primary">Add New Employee</a>
+</div>
