--- a/WarehouseWebApp/Views/Inventory/Index.cshtml
+++ b/WarehouseWebApp/Views/Inventory/Index.cshtml
@@ -4,10 +4,11 @@
 }
 
 <h1>Warehouse Inventory</h1>
-
+<div>
 <a asp-controller="Inventory" asp-action="Create" class="btn btn-primary">Add New Item</a>
+</div>
 
-<table class="table">
+<table class="table table-hover table-borderless">
     <thead>
         <tr>
             <th>ID</th>
